--- a/style.css
+++ b/style.css
@@ -20,27 +20,31 @@
   padding: 1vw;
   margin-left: 23vw;
   width: 50vw;
+  text-decoration: overline underline gray;
 }
 
 .avatar{
-  position: absolute;
-  height: 4vw;
-  width: auto;
-  margin-left: 72%;
-  margin-top: -5vw;
+  height: 4.5vw;
+  width: auto; 
+  float: left; 
+  margin-top: 1vw;
+  cursor: pointer;
 }
 
 .speech{
   width: 17vw;
-  margin-left: 78%;
-  margin-top: -4vw;
+  margin-left: 51%;
+  margin-top: 3vw;
   background: white;
   padding: 10px;
   text-align: center;
-  font-weight: 900;
+  font-weight: 700;
+  font-size: 1.5vw;
+  border-radius: 9px;
   color: black;
-  font-family: arial;
-  position: absolute;;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  position: absolute;
+  line-height: 2.2vw;
 }
 
 .sb1:before {
@@ -55,6 +59,7 @@
   left: -19px;
   top: 6px;
 }
+
 .pic{
   margin-left: 14%;
   margin-top: 1vw;
@@ -65,13 +70,13 @@
 
 .words{
   float: left;
-  font-size: 175%;
+  font-size: 2vw;
   word-wrap: break-word;
   text-overflow: clip;
   display: block;
-  margin-left: 3%;
-  margin-top: 2vh;
+  margin-top: 6vw;
   width: 40%;
+  margin-left: -4%;
 }
 
 .mySlides {
@@ -155,4 +160,66 @@
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+/* Bouncing animation */
+@-webkit-keyframes bounceLeft {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -webkit-transform: translateX(30px);
+    transform: translateX(30px);
+  }
+  60% {
+    -webkit-transform: translateX(15px);
+    transform: translateX(15px);
+  }
+}
+@-moz-keyframes bounceLeft {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(30px);
+  }
+  60% {
+    transform: translateX(15px);
+  }
+}
+@keyframes bounceLeft {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -ms-transform: translateX(0);
+    transform: translateX(0);
+  }
+  40% {
+    -ms-transform: translateX(30px);
+    transform: translateX(30px);
+  }
+  60% {
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+  }
+}
+/* /left bounce */
+
+.fa-arrow-left {
+  -webkit-animation: bounceLeft 2s infinite;
+  animation: bounceLeft 2s infinite;
+  margin-top: 2vw;
+  font-size:2.5vw;
+  position: absolute;
 }
