--- a/style.css
+++ b/style.css
@@ -23,6 +23,101 @@
   text-decoration: overline underline gray;
 }
 
+.multiple{
+  width: 40vw;
+  margin-left: 38vw;
+  margin-top: 6vw;
+  height: 20vw;
+  padding: 1vw;
+  background-color: whitesmoke;
+  text-align: center;
+  font-size: 2vw;
+  position: absolute;
+
+}
+
+.arrow:before{
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 10px solid whitesmoke;
+  border-right: 10px solid transparent;
+  border-top: 10px solid whitesmoke;
+  border-bottom: 10px solid transparent;
+  right: -19px;
+  top: 6px;
+}
+
+.multImg{
+  width: 10vw;
+  height: auto;
+  padding: 1vw;
+  cursor: pointer;
+}
+
+
+.dictionary{
+  width: 25vw;
+  height: 8vw;
+  padding: .5vw 1vw .5vw 1vw;
+  background:lightgray;
+  text-align: center;
+  font-size: 1vw;
+  border-radius: 40%;
+  border: .2vw solid black;
+  color: black;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  position: absolute;
+  line-height: 2.2vw;
+}
+
+.bubble1{
+  border: .2vw solid black;
+  background-color: lightgrey;
+  position: absolute;
+  width: 25px;
+  padding: 20px;
+  border-radius: 50%;
+  right: -15px;
+  bottom: 23px;
+}
+
+
+
+.bubble2{
+  border: .2vw solid black;
+  background-color: lightgrey;
+  position: absolute;
+  width: 5px;
+  padding: 10px 15px;
+  border-radius: 50%;
+  right: -60px;
+  bottom: 5px;
+}
+
+.bubble3 {
+  border: .2vw solid black;
+  background-color: lightgrey;
+  position: absolute;
+  width: 1vw;
+  padding: 20px;
+  border-radius: 50%;
+  left: -10px;
+  bottom: 10px;
+}
+
+.bubble4 {
+  border: .2vw solid black;
+  background-color: lightgrey;
+  position: absolute;
+  width: 5px;
+  padding: 10px 15px;
+  border-radius: 50%;
+  left: -60px;
+  bottom: 5px;
+}
+
 .avatar{
   height: 4.5vw;
   width: auto; 
@@ -75,7 +170,7 @@
   text-overflow: clip;
   display: block;
   margin-top: 6vw;
-  width: 40%;
+  width: 40vw;
   margin-left: -4%;
 }
 
